--- a/index.html
+++ b/index.html
@@ -3,59 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/style.css">
     <title>Document</title>
 </head>
-<body>
 
-<nav class="navbar navbar-light bg-light navbar-expand-sm fixed-top"> 
-<a href="index.html">Home</a>
-<ul>
-    <li class="active nav-item mr-2"> <a class="nav-link" href="gallery.html"> Gallery</a> </li>
-    <li class="active nav-item mr-2"> <a class="nav-link" href="/"> Sign Up</a> </li>
-    
-</ul>
-<section class="space jumbotron text-center">
-    <div> 
+<body>
+<nav class="navbar bg-light navbar-expand-sm">
+<button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="toggle-navigation">
+ <span class="navbar-toggler-icon"> </span> </button>
+
+ <div class="collapse navbar-collapse" id="navbarNavDropdown"> 
+    <ul class="navbar-nav mr-auto"> 
+        <li class="active nav-item mr-2"> <a class="nav-link" href="index.html">Home</a> </li>
+        <li class="active nav-item mr-2"> <a class="nav-link" href="gallery.html">Gallery</a> </li>
+        <li class="active nav-item mr-2"> <a class="nav-link" href="/">Sign Up</a> </li>
+    </ul>
+ </div>
+</nav>
+
+<div class="media">
+    <img src="/Gallery/Paris.jpg" height="100" width="100" class="rounded-circle mr-3" alt="Paris from the Eiffel Tower">    
+</div>  
+
+<section class="space jumbotron">
+    <div class=""> 
     <h2 class="text-uppercase">Title of the websiste</h2>
         <p>Paragraph under the heading</p>
             <a href="https://en.wikipedia.org/wiki/Rijeka" target="_blank"> <button class="btn btn-success btn-lg"> Check Wikipedia about this!</button> </a>
     </div>
 </section>  
 
-<!-- 
-<section class="table">
-    <table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>@twitter</td>
-    </tr>
-  </tbody>
-</table>
- -->
-
-</section>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
 </html>
